--- a/BiliBili_WuShumin/Bili_Code/Home_首页/Recommend_推荐/View/Recommend_RecommendHeaderView.xib
+++ b/BiliBili_WuShumin/Bili_Code/Home_首页/Recommend_推荐/View/Recommend_RecommendHeaderView.xib
@@ -40,7 +40,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="热门推荐" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3mk-Mo-6MW">
                             <rect key="frame" x="38" y="3" width="56" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
