masonry 约束完成 collectionViewcell 高度自适应
1.  约束添加给 contentView 而不是 cell
2.  content.bottom = ws.desLabel.bottom + 10. bottom 约束添加到 contentView
上 而不是desLabel上。
make.height.greaterThanOrEqualTo(@(14)).priority(1000); // 1000 优先级一定要高
3. 重写 preferredLayoutAttributesFittingAttributes
- (UICollectionViewLayoutAttributes
*)preferredLayoutAttributesFittingAttributes:(UICollectionViewLayoutAttr
ibutes *)layoutAttributes {
    [self setNeedsLayout];
    [self layoutIfNeeded];
    CGSize size = [self.contentView
systemLayoutSizeFittingSize:layoutAttributes.size];
    CGRect newFrame = layoutAttributes.frame;
    newFrame.size.height = size.height;
    newFrame.size.width = screenWidth - 12 * 2;
    layoutAttributes.frame = newFrame;
    return layoutAttributes;
}

--- a/BiliBili_WuShumin/Bili_Code/Home_首页/Bungumi_番剧/View/Bungumi_PreviousHeaderView.xib
+++ b/BiliBili_WuShumin/Bili_Code/Home_首页/Bungumi_番剧/View/Bungumi_PreviousHeaderView.xib
@@ -63,6 +63,7 @@
                 <constraint firstItem="Xal-YK-cmI" firstAttribute="leading" secondItem="TfA-s5-piU" secondAttribute="leading" id="hZr-Tk-gF3"/>
             </constraints>
             <connections>
+                <outlet property="arrowImageView" destination="c8i-ya-kDw" id="TfU-Wf-wWq"/>
                 <outlet property="iconImageView" destination="iw3-oW-PEV" id="6GO-ih-WWI"/>
                 <outlet property="mainView" destination="Xal-YK-cmI" id="anu-Na-cAg"/>
                 <outlet property="rightTitleLabel" destination="vjK-eD-Aai" id="QY9-ss-uQD"/>
