--- a/BiliBili_WuShumin/Bili_Code/Home_首页/Live_直播/View/LiveHeaderView.xib
+++ b/BiliBili_WuShumin/Bili_Code/Home_首页/Live_直播/View/LiveHeaderView.xib
@@ -9,18 +9,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LiveHeaderView" id="Qx4-n4-2FC" userLabel="LiveHeaderView" customClass="LiveHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="223"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="223"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFr-gJ-SJ1" userLabel="TopView">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="121.5"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="hFr-gJ-SJ1" secondAttribute="height" multiplier="75:22" id="6Zb-97-PJz"/>
                     </constraints>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Hf1-QO-izN">
-                    <rect key="frame" x="20" y="130" width="335" height="55"/>
+                <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Hf1-QO-izN">
+                    <rect key="frame" x="20" y="130" width="374" height="55"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="myg-jg-TEP" userLabel="关注主播" customClass="BungumiCaterotyTouchView">
                             <rect key="frame" x="0.0" y="0.0" width="55" height="55"/>
@@ -31,7 +31,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qla-9V-4Lj" userLabel="直播中心" customClass="BungumiCaterotyTouchView">
-                            <rect key="frame" x="93" y="0.0" width="55" height="55"/>
+                            <rect key="frame" x="107" y="0.0" width="55" height="55"/>
                             <color key="backgroundColor" red="1" green="0.3397154355" blue="0.83482642600000001" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="55" id="LcQ-jf-VVY"/>
@@ -39,7 +39,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T9Z-Hx-xDW" userLabel="搜索房间" customClass="BungumiCaterotyTouchView">
-                            <rect key="frame" x="186" y="0.0" width="55" height="55"/>
+                            <rect key="frame" x="213" y="0.0" width="55" height="55"/>
                             <color key="backgroundColor" red="0.52425303440000004" green="1" blue="0.11776956349999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="GJA-wd-icW"/>
@@ -47,7 +47,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMK-2F-qAS" userLabel="全部分类" customClass="BungumiCaterotyTouchView">
-                            <rect key="frame" x="280" y="0.0" width="55" height="55"/>
+                            <rect key="frame" x="319" y="0.0" width="55" height="55"/>
                             <color key="backgroundColor" red="1" green="0.62355606149999998" blue="0.082593328950000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="LWO-6I-RSx"/>
@@ -59,7 +59,7 @@
                         <constraint firstAttribute="height" constant="55" id="PTB-qp-Qnz"/>
                     </constraints>
                 </stackView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qXQ-C6-3U0" userLabel="DownView">
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qXQ-C6-3U0" userLabel="DownView">
                     <rect key="frame" x="12" y="203" width="351" height="20"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_region_icon_live_v2" translatesAutoresizingMaskIntoConstraints="NO" id="JlK-kV-shS">
@@ -69,7 +69,7 @@
                                 <constraint firstAttribute="height" constant="20" id="sWa-zq-AFw"/>
                             </constraints>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="common_rightArrowShadow" translatesAutoresizingMaskIntoConstraints="NO" id="IN7-hQ-ETw">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="common_rightArrowShadow" translatesAutoresizingMaskIntoConstraints="NO" id="IN7-hQ-ETw">
                             <rect key="frame" x="331" y="0.0" width="20" height="20"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="推荐主播" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFx-ra-7or">
@@ -78,19 +78,19 @@
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个主播，进去看看" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tap-UX-ndM">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="个主播，进去看看" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tap-UX-ndM">
                             <rect key="frame" x="219" y="2" width="104" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1080" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MR3-Cq-feQ">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1080" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MR3-Cq-feQ">
                             <rect key="frame" x="188" y="2" width="31" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="1" green="0.56011969269999995" blue="0.73446201119999999" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-YY-I4z">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="当前" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-YY-I4z">
                             <rect key="frame" x="161" y="2" width="26" height="16"/>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
