--- a/BiliBili_WuShumin/Bili_Code/Home_首页/Recommend_推荐/View/Recommend_RecommendHeaderView.xib
+++ b/BiliBili_WuShumin/Bili_Code/Home_首页/Recommend_推荐/View/Recommend_RecommendHeaderView.xib
@@ -9,23 +9,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="r_recommendHeaderView" id="U6b-Vx-4bR" customClass="Recommend_RecommendHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPy-hO-I8T" userLabel="TopView">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="121.5"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="aPy-hO-I8T" secondAttribute="height" multiplier="75:22" id="cZ0-eX-5Yr"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFn-jI-t8u" userLabel="DownView">
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tFn-jI-t8u" userLabel="DownView">
                     <rect key="frame" x="0.0" y="130" width="375" height="20"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="common_rightArrowGray" translatesAutoresizingMaskIntoConstraints="NO" id="dhT-9f-sjT">
                             <rect key="frame" x="356" y="4" width="7" height="13"/>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_recommend" translatesAutoresizingMaskIntoConstraints="NO" id="44I-6e-5Rw">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="home_recommend" translatesAutoresizingMaskIntoConstraints="NO" id="44I-6e-5Rw">
                             <rect key="frame" x="12" y="0.0" width="20" height="20"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="home_rank" translatesAutoresizingMaskIntoConstraints="NO" id="JKn-0h-Hjz">
@@ -37,7 +37,7 @@
                             <color key="textColor" red="0.99215686274509807" green="0.71372549019607845" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="热门推荐" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3mk-Mo-6MW">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="热门推荐" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3mk-Mo-6MW">
                             <rect key="frame" x="38" y="3" width="56" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -49,7 +49,6 @@
                         <constraint firstAttribute="bottom" secondItem="3mk-Mo-6MW" secondAttribute="bottom" id="1Qg-5w-JjE"/>
                         <constraint firstAttribute="trailing" secondItem="dhT-9f-sjT" secondAttribute="trailing" constant="12" id="TrS-3C-QYg"/>
                         <constraint firstAttribute="bottom" secondItem="44I-6e-5Rw" secondAttribute="bottom" id="WOC-ca-Q4c"/>
-                        <constraint firstAttribute="trailing" secondItem="WVB-5o-G8J" secondAttribute="trailing" constant="30" id="bqm-Hj-Z0C"/>
                         <constraint firstItem="44I-6e-5Rw" firstAttribute="leading" secondItem="tFn-jI-t8u" secondAttribute="leading" constant="12" id="dAQ-Id-S5S"/>
                         <constraint firstItem="WVB-5o-G8J" firstAttribute="leading" secondItem="JKn-0h-Hjz" secondAttribute="trailing" constant="6" id="e36-FS-YCa"/>
                         <constraint firstAttribute="bottom" secondItem="WVB-5o-G8J" secondAttribute="bottom" id="eu3-jk-6oo"/>
@@ -57,14 +56,7 @@
                         <constraint firstItem="3mk-Mo-6MW" firstAttribute="leading" secondItem="44I-6e-5Rw" secondAttribute="trailing" constant="6" id="jVa-XL-BNT"/>
                         <constraint firstAttribute="bottom" secondItem="JKn-0h-Hjz" secondAttribute="bottom" id="mnQ-Il-9vh"/>
                         <constraint firstItem="dhT-9f-sjT" firstAttribute="leading" secondItem="WVB-5o-G8J" secondAttribute="trailing" constant="6" id="qCw-GA-mIB"/>
-                        <constraint firstItem="dhT-9f-sjT" firstAttribute="bottom" secondItem="JKn-0h-Hjz" secondAttribute="bottom" id="yWK-0G-CRW"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="bqm-Hj-Z0C"/>
-                            <exclude reference="yWK-0G-CRW"/>
-                        </mask>
-                    </variation>
                 </view>
             </subviews>
             <constraints>
@@ -84,7 +76,7 @@
                 <outlet property="rightLabel" destination="WVB-5o-G8J" id="oUO-wc-JpR"/>
                 <outlet property="topView" destination="aPy-hO-I8T" id="gvz-pE-jca"/>
             </connections>
-            <point key="canvasLocation" x="595.5" y="350"/>
+            <point key="canvasLocation" x="610" y="350"/>
         </collectionReusableView>
     </objects>
     <resources>
